$Id: History,v 1.13 2001-08-14 18:26:49 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/OpenGL
-------------------------------------

14th August 2001  John Allison  (vis-V03-02-11)
- Improved KernelVisitDecision.
- Fixed a few small bugs in multiple "stored" viewers, but see next item.
- There's an outstanding bug in OpenGL Stored.  If there is more than
  one viewer controlled by a scene handler, after a ClearStore on the
  scene handler, e.g., with /vis/scene/notifyHandlers, the first
  viewer to get refreshed should trigger the display list rebuild, but
  the second need not.  However, when the second viewer's turn comes,
  the display lists are there, and are called, e.g.,
  G4OpenGLStoredXViewer::DrawView calls
  G4OpenGLStoredViewer::DrawDisplayLists that calls glCallList, but
  nothing appears on the screen.  To overcome this there is some
  temporary code in G4VViewer::NeedKernelVisit which marks *all*
  viewers to force a rebuild.  To see the symptoms, comment out that
  temporary code and issue these commands:
    /vis/verbose c
    /control/verbose 2
    /vis/scene/create
    /vis/scene/add/volume
    /vis/sceneHandler/create OGLSX