@@ -1,4 +1,4 @@
-$Id: History,v 1.13 2001-08-14 18:26:49 johna Exp $
+$Id: History,v 1.14 2001-08-24 18:37:05 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,10 @@ committal in the CVS repository !
 
 History file for visualization/OpenGL
 -------------------------------------
+
+24th August 2001  John Allison  (vis-V03-02-11-00)
+- Limited the printing of warnings in
+  G4OpenGLSceneHandler::AddPrimitive (const G4Text& text).
 
 14th August 2001  John Allison  (vis-V03-02-11)
 - Improved KernelVisitDecision.
